<resources>
    <string name="app_name">Cinema</string>
    <string-array name="filterTypeSpinnerStrings">
        <item>Genre</item>
        <item>Age</item>
    </string-array>
    <string-array name="filterSpinnerStrings">
        <item>Genre</item>
        <item>Age</item>
    </string-array>
    <string-array name="sortBySpinnerStrings">
        <item>popularity.desc</item>
        <item>popularity.asc</item>
        <item>release_date.desc</item>
        <item>release_date.asc</item>
        <item>revenue.desc</item>
        <item>revenue.asc</item>
        <item>primary_release_date.desc</item>
        <item>primary_release_date.asc</item>
        <item>original_title.desc</item>
        <item>original_title.asc</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="filmBtnString">Movies</string>
    <string name="biosBtnString">Cinema</string>
    <string name="ticketBtnString">Tickets</string>
    <string name="langSwitchBtnString">Switch to dutch</string>
    <string name="logoImgViewString">Cinema Logo</string>
    <string name="contactNameViewString" translatable="false">Avans Bioscoop</string>
    <string name="contactLovViewString" translatable="false">Hogeschoollaan 1</string>
    <string name="contactPostViewString" translatable="false">4818 CR Breda</string>
    <string name="contactNumberViewString">+31 88 525 75 00</string>
    <string name="routeViewString">Route Description</string>
    <string name="contactMailViewString" translatable="false">biosbreda@cinemas.com</string>
    <string name="teZienBttnString">Now Playing</string>
    <string name="bekekenBttnString">History</string>
    <string name="filmSearchBarString">Title...</string>
    <string name="filmSearchBttnString">Search</string>
    <string name="filmTitleString" translatable="false">Film title</string>
    <string name="filmYearString" translatable="false">Year</string>
    <string name="filmImageString" translatable="false">Thumbnail</string>
    <string name="ticketSearchBarString">Title...</string>
    <string name="ticketSearchBttn">Search</string>
    <string name="filmTicketDate" translatable="false">Date</string>
    <string name="filmTicketAmountString" translatable="false">Amount tickets</string>
    <string name="detailQrImage" translatable="false">QR</string>
    <string name="detailBuyerName">Name:</string>
    <string name="detailBuyerAge">Age:</string>
    <string name="detailBuyerSeat">Amount of tickets:</string>
    <string name="ticketsTabBttn">Tickets</string>
    <string name="reviewsTabBttn">Reviews</string>
    <string name="infoTabBttn" translatable="false">Info</string>
    <string name="makeReviewBttn">Write Review</string>
    <string name="filmBackdrop" translatable="false">Backdrop Film</string>
    <string name="userImage" translatable="false">Person Image of User</string>
    <string name="reviewBox">Your review here...</string>
    <string name="userName">Logged in as:</string>
    <string name="userRealName">Name:</string>
    <string name="reviewSubmitBttn">Submit Review</string>
    <string name="reviewerName" translatable="false">Username reviewer</string>
    <string name="infoTitle">Film title</string>
    <string name="infoRelease">Released:</string>
    <string name="infoAge">Age:</string>
    <string name="infoLanguage">Language:</string>
    <string name="infoRuntime">Runtime:</string>
    <string name="infoGenre" translatable="false">Genre:</string>
    <string name="infoDirector">Director:</string>
    <string name="infoRating">Rating:</string>
    <string name="infoPlot" translatable="false">Plot:</string>
    <string name="playtimeDag" translatable="false">Dag</string>
    <string name="playtimeDatum" translatable="false">Date</string>
    <string name="playtimeStartTime" translatable="false">Start Time</string>
    <string name="playtimeEndTime" translatable="false">End Time</string>
    <string name="ticketAantalView">Ticket Amount:</string>
    <string name="ticketStudentView">Student Amount:</string>
    <string name="ticketKindView">Child Amount:</string>
    <string name="ticketPrijsView">Price:</string>
    <string name="ticketPrijsNumber" translatable="false">€</string>
    <string name="ticketPayView">Payment Method</string>
    <string name="ticketIDealBttn" translatable="false">IDeal</string>
    <string name="ticketPaypalBttn" translatable="false">PayPal</string>
    <string name="ticketCreditBttn" translatable="false">CreditCard</string>
    <string name="ticketSeatBttn">Seat selection</string>
    <string name="bedanktView">Thanks for your payment with...</string>
    <string name="toEticketBttn">Show E-Ticket</string>
    <string name="toRouteBttn">Route Description</string>
    <string name="backToHomeBttn">Back to home</string>
    <string name="selected_seat_text">Selected seat: </string>
    <string name="payBtn">TO PAYMENT</string>
    <string name="finalBtn">COMPLETE ORDER</string>
    <string name="ratingText" translatable="false">Rating: </string>
    <string name="ticketPayText">Payment Method </string>


    <string-array name="listDummyEntries">
        <item>dummy</item>
    </string-array>
    <string name="usernameView">Username</string>
    <string name="passView">Password</string>
    <string name="loginBttn" translatable="false">Login</string>
    <string name="registrationBttn">Create account</string>
    <string name="personalDetailsView">Personal Details:</string>
    <string name="voornaamView">Firstname:</string>
    <string name="achternaamView">Lastname:</string>
    <string name="mailView">E-mail address:</string>
    <string name="adresView">Address:</string>
    <string name="woonplaatsView">Place of residency:</string>
    <string name="postcodeView">Postal Code:</string>
    <string name="accountDetailsView">Account Details:</string>
    <string name="usernameEnterView">Username:</string>
    <string name="passwordEnterView">Password:</string>
    <string name="wrongPassword">Username or password is invalid.</string>
    <string name="reviewText" translatable="false">Review</string>
    <string name="historyAddBttn">Add to History</string>

</resources>
