<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.whrabbit.bioscoop.DetailedTicketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ticketAantalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticketAantalView"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/ticketAantalSpinner"
            android:layout_width="50dp"
            android:layout_height="17dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ticketStudentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="20dp"
        android:text="@string/ticketStudentView"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/ticketStudentSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticketKindView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/ticketKindView"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/ticketKindSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticketPrijsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="25dp"
        android:text="@string/ticketPrijsView"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/ticketPrijsNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticketPrijsNumber"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ticketPayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/ticketPayView"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/ticketIDealBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketIDealBttn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ticketPaypalBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketPaypalBttn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ticketCreditBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketCreditBttn"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/ticketSeatBttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticketSeatBttn" />
    </LinearLayout>
</LinearLayout>
