<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ticketPrijsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="25dp"
            android:text="@string/ticketPrijsView"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/ticketPrijsNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticketPrijsNumber"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/selected_seat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_seat_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/selected_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/ticketPayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticketPayText"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ticketPayView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticketPayView"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/ticketIDealBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketIDealBttn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ticketPaypalBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketPaypalBttn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ticketCreditBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ticketCreditBttn"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/finalBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalBtn" />
    </LinearLayout>
</LinearLayout>
