<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.whrabbit.bioscoop.FinalActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoFinalView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logoImgViewString"
        android:paddingEnd="75dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:paddingStart="75dp"
        android:paddingTop="25dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/bedanktView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingStart="50dp"
        android:paddingTop="25dp"
        android:text="@string/bedanktView"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/toEticketBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="25dp"
        android:text="@string/toEticketBttn" />

    <Button
        android:id="@+id/toRouteBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/toRouteBttn" />

    <Button
        android:id="@+id/backToHomeBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/backToHomeBttn" />

</LinearLayout>
