<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImgView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logoImgViewString"
        android:padding="20dp"
        app:srcCompat="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp">

        <Button
            android:id="@+id/filmBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/filmBtnString"
            android:textSize="50sp" />

        <Button
            android:id="@+id/biosBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/biosBtnString"
            android:textSize="50sp" />

        <Button
            android:id="@+id/ticketBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/ticketBtnString"
            android:textSize="50sp" />

        <Switch
            android:id="@+id/langSwitchBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/langSwitchBtnString"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
