<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/filmBackdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@string/filmBackdrop"
        app:srcCompat="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ticketsTabBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_right"
            android:text="@string/ticketsTabBttn"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/reviewsTabBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/no_border"
            android:text="@string/reviewsTabBttn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/infoTabBttn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_left"
            android:text="@string/infoTabBttn"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <ListView
            android:id="@+id/playtimesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/listDummyEntries" />
    </LinearLayout>
</LinearLayout>