<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/userImage"
            app:srcCompat="@drawable/panel_46628202_image_a72c6708272e0e22_320"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingTop="75dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/userName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/userRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/userRealName"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/ratingText"
                android:textColor="@android:color/white" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1" />
        </LinearLayout>
    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/reviewBox"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="3"-->
        <!--android:background="@drawable/full_border"-->
        <!--android:hint="@string/reviewBox"-->
        <!--android:padding="5dp"-->
        <!--android:textColor="@android:color/white" />-->

    <EditText
        android:id="@+id/reviewBox"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:layout_weight="1.83"
        android:background="@drawable/full_border"
        android:ems="10"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:padding="5dp">

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/reviewSubmitBttn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/no_border"
        android:text="@string/reviewSubmitBttn" />
</LinearLayout>